# Axiom-Ledger

./: .env.example  .gitignore  DESIGN.md  DOMAIN_NOTES.md  README.md  pyproject.toml  requirements-database.txt  requirements-refinery.txt  requirements-week3.txt  requirements.txt
data/: seed_events.jsonl
datagen/: generate_all.py
docs/: FINAL_REPORT.md  INTERIM_REPORT.md  VIDEO_TRANSCRIPT.md  interim_architecture.mmd  rubric_evidence.md  verification_queries.sql
ledger/: event_store.py  logging_config.py
ledger/agents/: base_agent.py  credit_analysis_agent.py  stub_agents.py
ledger/integrations/: document_refinery_adapter.py  gemini_llm.py  llm_key_utils.py  openrouter_llm.py
ledger/registry/: client.py
scripts/: run_pipeline.py
src/: README.md  __init__.py  event_store.py  schema.sql
src/aggregates/: __init__.py  agent_session.py  audit_ledger.py  compliance_record.py  loan_application.py
src/commands/: __init__.py  handlers.py
src/integrity/: __init__.py  audit_chain.py  gas_town.py
src/mcp/: __init__.py  resources.py  server.py  tools.py
src/models/: __init__.py  events.py
src/projections/: __init__.py  agent_performance.py  application_summary.py  compliance_audit.py  daemon.py
src/regulatory/: __init__.py  package.py
src/upcasting/: __init__.py  registry.py  upcasters.py
src/what_if/: __init__.py  projector.py
tests/: test_aggregate_rules.py  test_concurrency.py  test_gas_town.py  test_integrity.py  test_mcp_lifecycle.py  test_narratives.py  test_projections.py  test_rubric_core.py  test_upcasting.py
(+1 files in other folders)
