[project]
name = "axiom-ledger"
version = "0.1.0"
description = "Event-sourced lending and enterprise audit infrastructure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0,<0.30; python_version < '3.14'",
    "anthropic>=0.30.0,<0.40",
    "google-generativeai>=0.8.0,<1.0",
    "pydantic>=2.6.0,<3.0",
    "langgraph>=0.1.0,<0.3",
    "faker>=24.0.0,<26.0",
    "reportlab>=4.2.0,<5.0",
    "openpyxl>=3.1.0,<4.0",
    "pdfplumber>=0.10,<1.0",
    "fastmcp>=0.9.0",
    "python-dotenv>=1.0.0,<2.0",
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<0.25",
    "colorlog>=6.8.0,<7.0",
]

[project.optional-dependencies]
database = [
    "asyncpg>=0.29.0,<0.30; python_version < '3.14'",
]
refinery = [
    "refinery",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
refinery = { path = "vendor/Document-Intelligence-Refinery", editable = true }
